[cosmetics] Don't use new Double(..) but Double.valueOf(..) instead